# FreeRDP-WebConnect

./: .autotools  .cproject  .gitattributes  .gitignore  .project  README  README.md  install_prereqs.sh  setup-all.sh
ehs_code/: AUTHORS  CMakeLists.txt  Makefile.am  README  TODO  config.h.cmake  configure.ac  contentdisposition.h  datum.cpp  datum.h  debug.h  dynamicssllocking.cpp  dynamicssllocking.h  ehs-chunktest.pl  ehs-stress.pl  ehs.cpp  ehs.h  ehs_development_guide.txt  ehsconnection.h  ehsserver.h  ehstypes.h  ehstypes.h.cmake  formvalue.cpp  formvalue.h  httprequest.cpp  httprequest.h  httpresponse.cpp  httpresponse.h  mutexhelper.h  networkabstraction.h  osdep.cpp  securesocket.cpp  securesocket.h  socket.cpp  socket.h  sslerror.cpp  sslerror.h  staticssllocking.cpp  staticssllocking.h
ehs_code/cmake/: FindMyPNG.cmake  FindThreads.cmake  FindWindowsSDK.cmake  pretty_func.c  unique_pointer.c
ehs_code/conf/: aminclude.am  authors.xml  doxygen.cfg.in  ehs.spec.in  mingw32-ehs.spec.in
ehs_code/debian/: control  copyright  docs  libehs-dev.dirs  mkchangelog.pl  postinst  postrm  preinst  prerm  rules  watch
ehs_code/doc/: manual.dox.in
ehs_code/m4/: ax_prog_doxygen.m4  boost.m4  flags.m4  rcversion.m4  svnrev.m4
ehs_code/samples/: Makefile.am  bindhelper.c  btexception.cpp  btexception.h  common.h  ehs_basicauth.cpp  ehs_chunktest.cpp  ehs_exception.cpp  ehs_formtest.cpp  ehs_https.cpp  ehs_mirror.cpp  ehs_privport.cpp  ehs_simple.cpp  ehs_test.cpp  ehs_testharness.cpp  ehs_uploader.cpp  ehs_wsgate.cpp  sha1.cpp  wsendpoint.h  wsutf8.h
ehs_code/setup/: Makefile.am  ehs.iss
wsgate/: CMakeLists.txt  Makefile  Makefile.am  NOTICE  NTService.cpp  NTService.hpp  Png.cpp  Png.hpp  Primary.cpp  Primary.hpp  RDP.cpp  RDP.hpp  README  Update.cpp  Update.hpp  base64.cpp  base64.hpp  btexception.cpp  btexception.h  btexception.hpp  common.h  common.hpp  config.h.cmake  configure.ac  ehs.tag  logging.cpp  logging.hpp  logging.mc  myBindHelper.cpp  myBindHelper.hpp  myWsHandler.cpp  myWsHandler.hpp  myrawsocket.cpp  myrawsocket.h  myrawsocket.hpp  nova_token_auth.cpp  nova_token_auth.hpp  pluginCommon.h  pluginManager.cpp  pluginManager.h  (+22 more)
wsgate/cmake/: FindCasablanca.cmake  FindEHS.cmake  FindFreeRDP.cmake  FindMyPNG.cmake  FindPthreads.cmake  FindWinPR.cmake  FindWindowsSDK.cmake
wsgate/conf/: doxygen-callgraph.cfg.in  doxygen.cfg.in  initrc.debian  initrc.redhat  initrc.redhat.in  initrc.suse  initrc.suse.in  keygen.sh  logrotate  permissions  rsyslog  wsgate-keygen.service  wsgate.service  wsgate.service.in  wsgate.spec.in
wsgate/debian/: control  copyright  docs  init.d  mkchangelog.pl  postinst  postrm  rules  watch.ex  wsgate.default
wsgate/m4/: boost.m4  compat.m4  flags.m4  gitrev.m4  pexception.m4  rcversion.m4  vamacros.m4
wsgate/pluginOpenstack/: CMakeLists.txt  config.h.cmake  nova_token_auth.cpp  nova_token_auth.hpp  pluginOpenstack.cpp
wsgate/pluginTemplate/: pluginCommon.cpp  pluginCommon.h  pluginCommon.hpp  pluginExample.cpp
wsgate/setup/: Makefile.am  findrequires.pl.in  isccwrap.sh.in  openssl.cnf  version.iss  wsgate.iss
wsgate/tools/: strip-debug.pl
wsgate/webroot/: CMakeLists.txt  Makefile.am  index-debug.html  index.html  wstest.html
wsgate/webroot/css/: style-debug.css  vkb-debug.css
wsgate/webroot/js/: modernizr-debug.js  mootools-debug.js  simpletabs-debug.js  vkb-debug.js  vkbl-de_DE.js  vkbl-de_DE.json  vkbl-en_US.js  vkbl-en_US.json  wsgate-debug.js
