ACLOCAL_AMFLAGS = -I m4

SUBDIRS = . webroot $(PLATFORM_SUBDIRS)
DIST_SUBDIRS = . webroot setup

sbin_PROGRAMS = wsgate
pkglibexec_PROGRAMS = $(BINDHELPER)
pkglibexec_SCRIPTS = $(KEYGEN)
EXTRA_PROGRAMS = bindhelper
EXTRA_SCRIPTS = conf/keygen.sh

bindhelper_SOURCES = bindhelper.c
bindhelper_CFLAGS = $(SUID_CFLAGS)
bindhelper_LDFLAGS = $(SUID_LDFLAGS)

wsgate_SOURCES = \
	base64.cpp \
	btexception.cpp \
	logging.cpp \
	sha1.cpp \
	wsgate_main.cpp \
	RDP.cpp \
	Update.cpp \
	Primary.cpp \
	Png.cpp \
	nova_token_auth.cpp

wsgate_CPPFLAGS = \
	-DBINDHELPER_PATH=\"$(pkglibexecdir)/bindhelper$(EXEEXT)\" \
	-DDEFAULTCFG=\"$(sysconfdir)/wsgate.ini\"
wsgate_LDADD = $(SERVICE_OBJECTS) $(WSGATE_RES) $(WSGATE_LDADD) $(LIBPNG)
wsgate_DEPENDENCIES = $(SERVICE_OBJECTS) $(WSGATE_RES)
EXTRA_wsgate_SOURCES = wsgate.rc NTService.cpp

noinst_HEADERS = \
	base64.hpp \
	btexception.hpp \
	common.hpp \
	logging.hpp \
	myrawsocket.hpp \
	rdpcommon.hpp \
	sha1.hpp \
	wscommon.hpp \
	wsgate.hpp \
	wsendpoint.hpp \
	wsframe.hpp \
	wshandler.hpp \
	wsutf8.hpp \
	RDP.hpp \
	Update.hpp \
	Primary.hpp \
	NTService.hpp \
	Png.hpp \
	nova_token_auth.hpp

sysconf_DATA = wsgate.ini wsgate.ini.sample

# Extra stuff to distribute in tarball
EXTRA_DIST = $(DX_CONFIG) conf/wsgate.spec \
	tools/yuicompressor.jar tools/strip-debug.pl \
	wsgate.ini.sample.in logging.mc conf/logrotate conf/rsyslog \
	conf/initrc.redhat.in conf/initrc.suse.in conf/keygen.sh \
	conf/wsgate.service.in conf/initrc.debian conf/permissions \
	LICENSE NOTICE debian FreeRDP.ico

# We want the maintainer-clean to REALLY remove anything that can be
# generated by running make -f Makefile.am
MAINTAINERCLEANFILES = -r aclocal.m4 config.h.in* configure Makefile.in \
	conf/missing conf/depcomp conf/ltmain.sh conf/install-sh \
	conf/config.sub conf/config.guess m4/lt~obsolete.m4 \
	m4/ltoptions.m4 m4/libtool.m4 m4/ltversion.m4 m4/ltsugar.m4 \
	mingw32-config.cache autom4te.cache

MOSTLYCLEANFILES = $(DX_CLEANFILES)

CLEANFILES = -r wsgate.ini.sample logging.rc MSG00001.bin doxygen.log \
	$(PACKAGE)-$(VERSION) $(PACKAGE)_*.tar.gz $(PACKAGE)_*.dsc debian/init.d \
	conf/initrc.redhat conf/initrc.suse conf/wsgate.service wsgate.ini

am_v_rc = $(am_v_rc_$(V))
am_v_rc_ = $(am_v_rc_$(AM_DEFAULT_VERBOSITY))
am_v_rc_0 = @echo "  RC    " $@;

# Bootstrap target.
# After checkout from SVN, run make -f Makefile.am
bootstrap:
	autoreconf -if

wsgate.lo: wsgate.rc logging.rc MSG00001.bin
	$(am_v_rc)$(LIBTOOL) $(AM_V_lt) --tag=RC --mode=compile $(RC) -I$(top_builddir) -o $@ $<

wsgate.o: wsgate.rc logging.rc MSG00001.bin
	$(am_v_rc)$(RC) -I$(top_builddir) -o $@ $<

wsgate.ini: wsgate.ini.sample
	cp $< $@

inst-rsyslog: conf/rsyslog
	$(MKDIR_P) $(DESTDIR)$(sysconfdir)/rsyslog.d
	$(INSTALL_DATA) $< $(DESTDIR)$(sysconfdir)/rsyslog.d/wsgate.conf

inst-logrotate: conf/logrotate
	$(MKDIR_P) $(DESTDIR)$(sysconfdir)/logrotate.d
	$(INSTALL_DATA) $< $(DESTDIR)$(sysconfdir)/logrotate.d/wsgate

inst-rhinit: conf/initrc.redhat
	$(MKDIR_P) $(DESTDIR)$(INITRDDIR)
	$(INSTALL_SCRIPT) -m 0755 $< $(DESTDIR)$(INITRDDIR)/wsgate

inst-suseinit: conf/initrc.suse
	$(MKDIR_P) $(DESTDIR)$(INITRDDIR)
	$(INSTALL_SCRIPT) -m 0755 $< $(DESTDIR)$(INITRDDIR)/wsgate
	$(MKDIR_P) $(DESTDIR)$(sbindir)
	$(LN_S) -f -n $(sysconfdir)/init.d/wsgate $(DESTDIR)$(sbindir)/rcwsgate

inst-varrun:
	$(MKDIR_P) $(DESTDIR)/var/run/$(PACKAGE)

inst-suseperm: conf/permissions
	$(MKDIR_P) $(DESTDIR)$(sysconfdir)/permissions.d
	$(INSTALL_DATA) $< $(DESTDIR)$(sysconfdir)/permissions.d/wsgate

inst-systemd: conf/wsgate.service
	$(MKDIR_P) $(DESTDIR)$(SYSTEMDDIR)
	$(INSTALL_SCRIPT) -m 0755 $< $(DESTDIR)$(SYSTEMDDIR)/wsgate.service

MSG00001.bin logging.rc: logging.mc
	$(AM_V_GEN)$(MC) -e xx $<
	@rm -f logging.xx

alldoc: conf/doxygen.cfg
	$(MAKE) doxygen-doc 2> doxygen.log

dist-hook: alldoc
	cp -a doc $(distdir)/doc

all-local: conf/initrc.redhat conf/initrc.suse conf/wsgate.service debian/init.d

conf/initrc.%: conf/initrc.%.in
	$(AM_V_GEN)$(PERL) -p -e 's!_pkglibexecdir_!$(pkglibexecdir)!g' $< > $@

conf/wsgate.service: conf/wsgate.service.in
	$(AM_V_GEN)$(PERL) -p -e 's!_pkglibexecdir_!$(pkglibexecdir)!g' $< > $@

debian/init.d: conf/initrc.debian
	$(AM_V_GEN)$(PERL) -p -e 's!_pkglibexecdir_!$(pkglibexecdir)!g' $< > $@

debinst: install inst-logrotate inst-rsyslog inst-varrun

debprep: dist
	tar xfz $(PACKAGE)-$(VERSION).tar.gz
	$(RM) $(PACKAGE)-$(VERSION)/*.tar.gz
	cd $(PACKAGE)-$(VERSION) && perl debian/mkchangelog.pl $(VERSION) > debian/changelog

# Create debian source package
debsrc: debprep
	dpkg-source -b $(PACKAGE)-$(VERSION)

rpm: dist conf/$(PACKAGE).spec
	rm -f *.rpm
	rpmbuild $(RPMBUILD_OPTS) -ta $(distdir).tar.gz 2>&1 | tee rpmbuild.log
	test -n "`grep ^Wrote: rpmbuild.log`" || exit 1
	for rpm in `grep ^Wrote: rpmbuild.log|awk '{print $$2}'` ; do ln -snf $$rpm . ; done
	rm -f rpmbuild.log

setup: all alldoc
	$(MAKE) -C setup setup

dist-platform: $(PLATFORMDIST)

wsgate.ini.sample: wsgate.ini.sample.in
	$(AM_V_GEN)sed -e "s^%pkgdatadir%^$(pkgdatadir)^g" \
		-e "s^%sysconfdir%^$(sysconfdir)^g" \
		-e "s^%PACKAGE%^$(PACKAGE)^g" \
		< $< > $@

# Next ifdef is really tricky:
#  We want to be able to run make -f Makefile.am without having make
#  complaining with "missing separator" at the automake include line.
#  So we use GNUmake's conditional feature with a variable which is
#  always defined in the final Makefile but never defined in Makefile.am.
#  On the other hand, we don't want automake to complain about an unbalanced
#  endif, therefore we exploit GNUmakes's extended syntax which allows leading
#  spaces in conditional directives. This hides the endif from automake.
#
ifdef VERSION
include conf/aminclude.am
 endif
